chore: transition to 0.9.1 stable releases and update docs/code